--- a/Estilo/seminario.css
+++ b/Estilo/seminario.css
@@ -260,24 +260,68 @@ background-color: #0077B5; /* Color de LinkedIn */
 .social-buttons .twitter a {
 background-color: #1da1f2; /* Color de Twitter */
 }
-/* Estilos para dispositivos con un ancho máximo de 600px (pantallas pequeñas) */
-@media only screen and (max-width: 600px) {
-    .container {
-        width: 100%; /* El contenedor ocupa el 100% del ancho del contenedor padre */
-    }
 
-    .card {
-        width: 100%; /* La tarjeta ocupa el 100% del ancho de la ventana del navegador */
-    }
+.pie-pagina{
+    width: 100%;
+    background-color: #0a141d;
 }
-
-/* Estilos para dispositivos con un ancho mínimo de 601px (pantallas medianas y grandes) */
-@media only screen and (min-width: 601px) {
-    .container {
-        width: 90%; /* El contenedor ocupa el 90% del ancho del contenedor padre */
-    }
-
-    .card {
-        width: 80%; /* La tarjeta ocupa el 80% del ancho de la ventana del navegador */
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 250px;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: #0d2033;
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color: aqua;
+}
+.pie-pagina .grupo-2{
+    background-color: #0a1a2a;
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
+}
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:30px;
+        padding: 35px 0px;
     }
 }
